Bug 325296 JavaScript opacity for text in <div> element is broken, no problem on branch. patch by YAMASHITA Makoto <makotoy@ms.u-tokyo.ac.jp> r+sr=roc